#772280 followup: remove opacity from l10n-sid link wrapper to avoid color issues, make sid links more visible / standard

--- a/l10n_community/editor.css
+++ b/l10n_community/editor.css
@@ -49,7 +49,6 @@ td.source {
     padding-right: 6px;
     font-size: 10px;
     color: #000;
-    opacity: 0.4;
     float: right;
     clear: both;
   }
